--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.712.0",
     "@google-cloud/spanner": "^7.15.0",
-    "@phading/constants": "^0.2.4",
+    "@phading/constants": "^0.2.5",
+    "@phading/product_service_interface": "^0.8.0",
+    "@phading/video_service_interface": "^0.1.1",
     "@selfage/blocking_loop": "^1.2.0",
     "@selfage/env_var_getter": "^1.0.2",
     "@selfage/http_error": "^1.1.2",
