--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/phading-dev/video_service.git"
   },
-  "author": "Yuxuan Xie <teststaybaka@gmail.com> (http://www.yuxuanxie.com)",
+  "author": "Yuxuan Xie <ykuyo.dev@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/phading-dev/video_service/issues"
@@ -22,7 +22,7 @@
   ],
   "devDependencies": {
     "@selfage/cli": "^5.0.1",
-    "@selfage/generator_cli": "^3.3.2",
+    "@selfage/generator_cli": "^3.3.3",
     "@selfage/message": "^3.5.6",
     "@selfage/spanner_schema_update_cli": "^1.4.2",
     "@selfage/test_matcher": "^2.1.7",
@@ -36,11 +36,11 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.716.0",
+    "@aws-sdk/client-s3": "^3.717.0",
     "@google-cloud/spanner": "^7.15.0",
     "@phading/constants": "^0.3.0",
     "@phading/product_service_interface": "^0.8.1",
-    "@phading/video_service_interface": "^0.1.3",
+    "@phading/video_service_interface": "^0.1.5",
     "@selfage/blocking_loop": "^1.2.0",
     "@selfage/env_var_getter": "^1.0.2",
     "@selfage/http_error": "^1.1.2",
