--- a/package.json
+++ b/package.json
@@ -21,34 +21,39 @@
     ".mp4"
   ],
   "devDependencies": {
+    "@selfage/bundler_cli": "^5.3.0",
     "@selfage/cli": "^5.0.1",
-    "@selfage/generator_cli": "^4.0.4",
-    "@selfage/message": "^3.5.6",
-    "@selfage/spanner_schema_update_cli": "^1.4.2",
-    "@selfage/test_matcher": "^2.1.7",
+    "@selfage/generator_cli": "^4.2.1",
+    "@selfage/message": "^3.5.7",
+    "@selfage/spanner_schema_update_cli": "^1.4.3",
+    "@selfage/test_matcher": "^2.1.10",
     "@selfage/test_runner": "^5.2.0",
     "@selfage/tsconfig": "^1.1.0",
     "@types/express": "^4.17.21",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.5.4",
     "axios": "^1.7.9",
-    "hls.js": "^1.5.18",
+    "hls.js": "^1.5.20",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.735.0",
-    "@google-cloud/spanner": "^7.17.1",
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@google-cloud/spanner": "^7.18.1",
+    "@google-cloud/storage": "^7.15.2",
+    "@phading/cluster": "^0.2.5",
     "@phading/constants": "^0.3.5",
     "@phading/product_meter_service_interface": "^0.7.6",
     "@phading/product_service_interface": "^0.8.4",
-    "@phading/video_service_interface": "^0.1.10",
+    "@phading/video_service_interface": "^1.0.0",
     "@selfage/blocking_loop": "^1.2.0",
     "@selfage/env_var_getter": "^1.0.2",
     "@selfage/http_error": "^1.1.2",
-    "@selfage/node_service_client": "^1.2.4",
-    "@selfage/service_handler": "^6.0.2",
+    "@selfage/node_service_client": "^2.2.0",
+    "@selfage/ref": "^1.0.3",
+    "@selfage/service_handler": "^7.3.1",
     "express": "^4.21.0",
-    "google-auth-library": "^9.15.0",
+    "get-stream": "^6.0.1",
+    "google-auth-library": "^9.15.1",
     "mime-types": "^2.1.35"
   }
 }
