--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,5 +1,7 @@
 FROM node:20.12.1
 
+RUN apt-get update && apt-get install -y ffmpeg unzip && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 COPY package.json .
 COPY package-lock.json .
