--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY package.json .
 COPY package-lock.json .
 COPY bin/ .
-RUN npm install --production
+RUN npm ci --omit=dev
 
 EXPOSE 8080
 CMD ["node", "main_bin"]
