--- a/dev/cloudbuild.yaml
+++ b/dev/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: 'node:20.12.1'
   entrypoint: 'npm'
-  args: ['install']
+  args: ['ci']
 - name: 'node:20.12.1'
   entrypoint: 'npx'
   args: ['spanage', 'update', 'db/ddl', '-p', 'phading-dev', '-i', 'balanced-db-instance', '-d', 'video-db']
