--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@selfage/bundler_cli": "^5.3.0",
     "@selfage/cli": "^5.0.3",
-    "@selfage/generator_cli": "^4.2.1",
+    "@selfage/generator_cli": "^4.3.8",
     "@selfage/message": "^3.5.7",
     "@selfage/spanner_schema_update_cli": "^1.4.3",
     "@selfage/test_matcher": "^2.1.10",
@@ -38,16 +38,17 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
-    "@google-cloud/spanner": "^7.18.1",
+    "@aws-sdk/lib-storage": "^3.758.0",
+    "@google-cloud/spanner": "^7.19.1",
     "@google-cloud/storage": "^7.15.2",
-    "@phading/cluster": "^1.0.0",
-    "@phading/constants": "^0.3.5",
-    "@phading/product_meter_service_interface": "^1.0.1",
-    "@phading/product_service_interface": "^1.0.1",
-    "@phading/video_service_interface": "^1.0.0",
+    "@phading/cluster": "^1.0.2",
+    "@phading/constants": "^0.3.7",
+    "@phading/meter_service_interface": "^1.0.0",
+    "@phading/product_service_interface": "^1.0.5",
+    "@phading/video_service_interface": "^1.0.1",
     "@selfage/blocking_loop": "^1.2.0",
     "@selfage/http_error": "^1.1.2",
-    "@selfage/node_service_client": "^2.2.0",
+    "@selfage/node_service_client": "^2.2.2",
     "@selfage/ref": "^1.0.4",
     "@selfage/service_handler": "^7.3.1",
     "express": "^4.21.0",
