Added livenessProbe and readinessProbe. Added external origin for CORS.

--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -20,6 +20,18 @@ spec:
         image: gcr.io/phading-dev/video-service:latest
         ports:
         - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /readiness
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
         volumeMounts:
         - name: video-volume
           mountPath: /gcs_video
