--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
     ".mp4"
   ],
   "devDependencies": {
-    "@selfage/bundler_cli": "^5.3.0",
+    "@selfage/bundler_cli": "^5.4.0",
     "@selfage/cli": "^5.0.3",
     "@selfage/generator_cli": "^4.3.11",
     "@selfage/message": "^3.5.7",
-    "@selfage/spanner_schema_update_cli": "^1.4.3",
+    "@selfage/spanner_schema_update_cli": "^1.4.4",
     "@selfage/test_matcher": "^2.1.10",
     "@selfage/test_runner": "^5.2.0",
     "@selfage/tsconfig": "^1.1.0",
     "@types/express": "^4.17.21",
-    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.5.4",
     "axios": "^1.9.0",
     "hls.js": "^1.6.5",
@@ -41,19 +40,17 @@
     "@aws-sdk/lib-storage": "^3.828.0",
     "@google-cloud/spanner": "^7.21.0",
     "@google-cloud/storage": "^7.16.0",
-    "@phading/cluster": "^1.0.6",
+    "@phading/cluster": "^1.0.7",
     "@phading/constants": "^0.3.12",
     "@phading/meter_service_interface": "^1.0.0",
     "@phading/product_service_interface": "^1.1.13",
     "@phading/video_service_interface": "^1.1.2",
-    "@selfage/blocking_loop": "^1.2.0",
     "@selfage/http_error": "^1.1.2",
     "@selfage/node_service_client": "^2.2.2",
     "@selfage/ref": "^1.0.4",
     "@selfage/service_handler": "^7.4.0",
     "express": "^4.21.0",
     "get-stream": "^6.0.1",
-    "google-auth-library": "^9.15.1",
-    "mime-types": "^2.1.35"
+    "google-auth-library": "^9.15.1"
   }
 }
