--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -32,6 +32,13 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 10
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "512Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
         volumeMounts:
         - name: video-volume
           mountPath: /gcs_video
