--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -37,8 +37,8 @@ spec:
             cpu: "500m"
             memory: "512Mi"
           limits:
-            cpu: "500m"
-            memory: "512Mi"
+            cpu: "1"
+            memory: "1Gi"
         volumeMounts:
         - name: video-volume
           mountPath: /gcs_video
