Fixed test for the new Rclone method. Adjusted resources.

--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -34,11 +34,13 @@ spec:
           periodSeconds: 10
         resources:
           requests:
-            cpu: "500m"
-            memory: "1Gi"
-          limits:
             cpu: "1"
+            memory: "1Gi"
+            ephemeral-storage: "1Gi"
+          limits:
+            cpu: "2"
             memory: "2Gi"
+            ephemeral-storage: "2Gi"
         volumeMounts:
         - name: video-volume
           mountPath: /gcs_video
