Added HTTPRoute for Gateway migration.

--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -65,28 +65,48 @@ spec:
     path: /metricsz
     interval: 30s
 ---
-apiVersion: cloud.google.com/v1
-kind: BackendConfig
-metadata:
-  name: video-service-neg-health-check
-spec:
-  healthCheck:
-    port: 8080
-    type: HTTP
-    requestPath: /healthz
----
 apiVersion: v1
 kind: Service
 metadata:
   name: video-service
-  annotations:
-    cloud.google.com/neg: '{"ingress": true}'
-    beta.cloud.google.com/backend-config: '{"default": "video-service-neg-health-check"}'
 spec:
   selector:
     app: video-service-pod
   ports:
     - protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 8080
   type: ClusterIP
+---
+apiVersion: networking.gke.io/v1
+kind: HealthCheckPolicy
+metadata:
+  name: video-service-lb-health-check
+spec:
+  default:
+    config:
+      type: HTTP
+      httpHealthCheck:
+        port: 8080
+        requestPath: /healthz
+  targetRef:
+    group: ""
+    kind: Service
+    name: video-service
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: video-service-route-internal
+spec:
+  parentRefs:
+  - name: phading-gateway-internal
+    sectionName: http
+  rules:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /vn
+    backendRefs:
+    - name: video-service
+      port: 8080
